--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,30 +1,34 @@
-.sombra{
-    text-shadow: 2px 2px 5px #6959CD;
+body{
+    background-color: rgb(76, 88, 156);;
 }
-
-.sombra2{
-    text-shadow: 2px 2px 5px #800000;
+.colcanto {
+    flex: 1 0 0%;
+    padding-left: 5%;
+  }
+.p-3 {
+    background-color: #3a52bd;
+    border-style: groove;
+    border-color: rgb(82, 54, 12);
+  }
+  .list-group-item  {
+    background-color: #3a52bd;
+    color: rgb(44, 28, 5);
+    border-color: rgb(44, 28, 5);
+  }
+.annaperfil{
+    width: 87%;
+    height: auto;
+    padding-left: 3%;
+  }
+.list-group {
+    margin-top: 10%;
 }
-
-.aumentar_letra{
-   font-size: 2rem;
+.container-fluid{
+    background-color: #3a52bd;
 }
-
-
-
-.fundocintia{
-    background-color: aqua;
+.navbar{
+    background-color: #3a52bd;
 }
-
-.corfontecintia{
-    color: crimson;
-}
-
-.justificado{
-    text-align: justify;    
-}
-
-#sobre, #galeria{
-    margin-top: 2%;
-    margin-bottom: 2%;    
+.col-sm-4{
+    padding-top: 6%;
 }
