--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(76, 88, 156);;
+    background-color: rgb(215, 194, 59);;
 }
 .colcanto {
     flex: 1 0 0%;
@@ -27,7 +27,7 @@ body{
     background-color: #3a52bd;
 }
 .navbar{
-    background-color: #3a52bd;
+    background-color: #f6f854;
 }
 .col-sm-4{
     padding-top: 6%;
