--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,12 +1,8 @@
-body{
+body{background-color: rgb(207, 151, 78);
     background-color: rgb(215, 194, 59);;
 }
-.colcanto {
-    flex: 1 0 0%;
-    padding-left: 5%;
-  }
 .p-3 {
-    background-color: #3a52bd;
+    background-color: #e4dc45;
     border-style: groove;
     border-color: rgb(82, 54, 12);
   }
